add theme custom post

--- a/style.css
+++ b/style.css
@@ -304,9 +304,35 @@ nav.navbar.bootsnav ul.nav > li > a {
 	font-family: 'Titillium Web', sans-serif;
 }
 
-sub-menu {
+.nav.navbar-nav ul.sub-menu {
 	position: absolute;
 	left: 0;
+	background: #fff;
+	width: 300px;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	margin-top: 30px;
+	opacity: 0;
+	visibility: hidden;
+	transition: .3s;
+}
+
+.nav.navbar-nav ul.sub-menu li a {
+	color: #333;
+	display: block;
+	padding: 8px 15px;
+}
+
+.nav.navbar-nav ul.sub-menu li {
+	border-bottom: 1px solid #ddd;
+}
+
+.nav.navbar-nav li:hover ul.sub-menu {
+	opacity: 1;
+	visibility: visible;
+	z-index: 99;
+	margin-top: 0;
 }
 
 nav.navbar.bootsnav ul.nav > li > a:hover,
