--- a/style.css
+++ b/style.css
@@ -646,10 +646,12 @@ ul.cart-list>li.total>a.btn:hover {
 	margin-bottom: 50px;
 	overflow: hidden;
 }
-.services-tiem img{
-	float: left;
-	margin-right: 25px;
-	padding-left: 5px;
+.services-tiem img {
+    float: left;
+    margin-right: 25px;
+    padding-left: 5px;
+    max-width:
+    62px;
 }
 .services-tiem h3,.services-tiem p{
 	margin-left: 92px;
