--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@ Text Domain: neuron
 @import url('https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i');
 
 /* ================= General ==================== */
+.alignleft{float: left; margin-right: 20px}
+.alignright{float: right; margin-left: 20px}
+.aligncenter{float: none; display: block;margin: 0 auto 20px}
 html,
 body { 
 	height: 100% 
