portfolio page dynamic

--- a/style.css
+++ b/style.css
@@ -898,6 +898,7 @@ ul.cart-list>li.total>a.btn:hover {
     bottom: -30%;
     width: 100%;
     padding: 20px;
+    color: #fff;
 }
 .portfolio-item:hover .portfolio-details {
 	bottom: 0;
